fix leon film codes, add autorun_disabled to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ reframework/autorun/Console.lua
 reframework/autorun/EMV Engine
 reframework/data/Console/
 reframework/data/EMV_Engine/
+reframework/autorun_disabled
